--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/react": "^19.2.7",
 		"@types/react-dom": "^19.2.3",
 		"astro": "5.16.2",
+		"graphiql": "^5.2.2",
 		"react": "^19.2.3",
 		"react-dom": "^19.2.3",
 		"typescript": "5.9.3"
